<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="21dp"
    android:background="@drawable/gradient">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_navigate_putih" />

    <TextView
        android:id="@+id/tvReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_above="@id/tvPastikan"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:textColor="@color/putih"/>

    <TextView
        android:id="@+id/tvPastikan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pastikan"
        android:layout_above="@id/edtEmail"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/putih"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="email"
        android:textSize="12sp"
        android:textColorHint="@color/putih"
        android:textColor="@color/putih"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/putih"/>

    <Button
        android:id="@+id/btnKirimReset"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="12sp"
        android:text="@string/kirim_kode_reset"
        android:layout_below="@id/edtEmail"
        android:background="@drawable/btn_circle_merah"
        android:textColor="@color/putih"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>

</RelativeLayout>