<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahRencanaActivity"
    tools:showIn="@layout/activity_tambah_rencana">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rlEdit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/tambahRencanaToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">
                <ImageView
                    android:id="@+id/tambahRencanaBack"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_navigate_putih"
                    style="@style/RtlOverlay.Widget.AppCompat.ActionBar.TitleItem"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"/>
                <TextView
                    android:id="@+id/tambahRencanaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tambah_rencana"
                    fontPath="fonts/Raleway-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/putih"
                    style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
            </android.support.v7.widget.Toolbar>
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlEdit1"
            android:layout_marginBottom="72dp">
        <RelativeLayout
            android:id="@+id/rlEdit2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <EditText
                android:id="@+id/edtNamaRencana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nama rencana"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:layout_marginTop="16dp"
                android:layout_alignParentTop="true"
                android:textSize="12sp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:inputType="text"
                android:backgroundTint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/edtTanggalPergi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtNamaRencana"
                android:hint="Tanggal pergi"
                android:focusable="false"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:textSize="12sp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/edtTanggalPulang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtTanggalPergi"
                android:hint="Tanggal pulang"
                android:textSize="12sp"
                android:focusable="false"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>
            <TextView
                android:id="@+id/tvTambahjadwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtTanggalPulang"
                android:layout_marginTop="14dp"
                android:text="Tambah Jadwal"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtNamaLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTambahjadwal"
                android:hint="Nama lokasi"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:textSize="12sp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:inputType="text"
                android:backgroundTint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/edtPilihTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtNamaLokasi"
                android:hint="Tanggal"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:textSize="12sp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:inputType="date"
                android:focusable="false"
                android:backgroundTint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/edtWaktu"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@id/edtPilihTanggal"
                android:hint="Waktu"
                android:textSize="12sp"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edtLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtWaktu"
                android:hint="Lokasi"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:textSize="12sp"
                android:focusable="false"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"/>
            <Button
                android:id="@+id/btnTambahRencana"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="35dp"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:layout_below="@id/edtLokasi"
                android:background="@drawable/btn_circle_kuning"
                android:text="@string/tambah_rencana"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                android:textSize="12sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"/>

            <Button
                android:id="@+id/btnKonfirmasi"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/btnTambahRencana"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_circle_merah"
                android:text="@string/konfirmasi"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                android:textSize="12sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"/>
            <TextView
                android:id="@+id/tvDaftarJadwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar_jadwal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                fontPath="fonts/Raleway-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:layout_below="@id/btnKonfirmasi"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rvDaftarJadwal"
                android:layout_below="@id/tvDaftarJadwal">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>